--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,8 +28,11 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-  cursor: none; /* Hide the default cursor */
-  overflow: hidden; /* Prevent overflow */
+  cursor: none;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
 .cursor {
